--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1196,27 +1196,30 @@
                   <small>hooroo@double-grass.com</small><br />
                 </td>
               </tr>
-              <!-- 簽證資料上傳 Visa Upload -->
+              <!-- 中國簽證資料上傳 Visa Upload -->
               <tr style="display: none" id="media-section-row3">
                 <td
                   colspan="2"
                   style="border-top: none; width: 80%; border-right: none"
                 >
-                  <div id="visa-upload">
-                    <span class="label">簽證資料上傳Visa Document Upload</span
-                    ><br />
-                    請確認填妥以下資訊：<br />
-                    1. 航班號碼<br />
-                    2. 落地時間<br />
+                  <div id="visa-upload" style="background-color: mintcream">
+                    <span class="label">簽證申請 Visa Support</span><br />
+                    由於規定，目前中國地區人士來台需由在台單位協助申辦。
                     <div
                       id="visa-warning"
                       style="color: #c00; font-size: 0.9em"
                     >
-                      ! 請務必於期限內上傳完整資料，逾期恕不受理。
+                      請務必於 <b>7月7日</b>前
+                      填寫下列表單後上傳，以利安排申請流程。
                     </div>
+                    <br />
+                    <a
+                      href="https://forms.gle/hVu54wUfqqUMRxfG8"
+                      target="_blank"
+                      >下載表單</a
+                    >
                   </div>
                 </td>
-                <!-- 簽證資料警語 Visa Notice -->
                 <td
                   colspan="1"
                   style="
@@ -1233,6 +1236,26 @@
                   </div>
                 </td>
               </tr>
+
+              <!-- 海外簽證資料連結 Visa Upload -->
+              <tr style="display: none" id="media-section-overseasvisa">
+                <td style="border-top: none; width: 55vw">
+                  <div id="visa-upload">
+                    <span class="label">簽證申請 Visa Support</span><br />
+                    We provide a visa support package, including an official
+                    invitation letter and a brief introduction to TPABF. If you
+                    need any additional documents or information, feel free to
+                    contact us.
+                    <br /><br />
+                    <a
+                      href="https://drive.google.com/drive/folders/1sN6Yl2VnHXzTWAwXyOrTQ_cMjrITii0p?usp=sharing"
+                      target="_blank"
+                      >Download Package</a
+                    >
+                  </div>
+                </td>
+              </tr>
+
               <!-- 寄件訊息 Foreigner Form -->
               <tr style="display: none" id="media-section-row2">
                 <td style="border-top: none; width: 55vw">
@@ -1240,33 +1263,6 @@
                     <span class="label"
                       >海外寄件服務 Overseas Shipping Service</span
                     ><br />
-                    為確保您的物品順利送達現場，請務必完成下方表單填寫，並確保包裹於
-                    <b>2025年11月7日（週五）前</b> 抵達指定收件地址。<br />
-                    如未填寫表單或逾期寄達，我們將無法提供轉送協助，敬請留意。<br />
-                    <br />
-                    寄來表單：<a
-                      href="https://forms.gle/hVu54wUfqqUMRxfG8"
-                      target="_blank"
-                      >https://forms.gle/hVu54wUfqqUMRxfG8</a
-                    >
-                    <br /><br />
-                    完成寄回服務的表單填寫，請於活動最後一天
-                    <b>2025/11/23（日）17:00</b>
-                    起將需寄回之包裹集合到報到台，請在此之前確認所有提交資訊正確無誤。請您備好現金，現場點交後支付。<br />
-                    <br />
-                    寄回表單：<a
-                      href="https://ezpost.post.gov.tw/ITMATT/#"
-                      target="_blank"
-                      >https://ezpost.post.gov.tw/ITMATT/#</a
-                    >
-                    <br /><br />
-                    <hr
-                      style="
-                        border-top: 1px dashed black;
-                        margin: 6px 0;
-                        border-bottom: none;
-                      "
-                    />
                     To ensure your materials arrive safely, please make sure to
                     complete the shipping form and have your package delivered
                     before <b>November 7, 2025 (Fri.)</b> to the designated
@@ -1280,7 +1276,13 @@
                       target="_blank"
                       >https://forms.gle/hVu54wUfqqUMRxfG8</a
                     >
-                    <br /><br />
+                    <hr
+                      style="
+                        border-top: 1px dashed black;
+                        margin: 6px 0;
+                        border-bottom: none;
+                      "
+                    />
                     If you may need us to send back, please reply to the Return
                     Service survey below and you can re-edit the package
                     information later. We will start collecting packages at the
