--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1954,45 +1954,48 @@
                       font-family: 'Inclusive Sans', sans-serif;
                     "
                   >
-                    如有任何問題，請依主題聯繫對應窗口，我們將盡快回覆您：<br />
-                    If you have any questions, please contact the appropriate
-                    email below:<br /><br />
-                    📌 簽證相關 Visa Support<br />
-                    ✉️
-                    <a href="mailto:anm@double-grass.com"
-                      >anm@double-grass.com</a
-                    ><br /><br />
-                    📌 草率簿資料上傳 & 行銷素材 Catalog Submission & Marketing
-                    Materials<br />
-                    ✉️
-                    <a href="mailto:shao@double-grass.com"
-                      >shao@double-grass.com</a
-                    ><br /><br />
-                    📌 攤位配置與參展相關 Booth & Exhibitor Inquiries<br />
-                    ✉️
-                    <a href="mailto:xavia@double-grass.com"
-                      >xavia@double-grass.com</a
-                    ><br /><br />
-                    📌 寄件服務 Shipping Service<br />
-                    ✉️
-                    <a href="mailto:shakyfloor@double-grass.com"
-                      >shakyfloor@double-grass.com</a
-                    ><br /><br />
-                    📌 現場活動相關（講座／工作坊／表演）Program Proposals<br />
-                    ✉️
-                    <a href="mailto:shakyfloor@double-grass.com"
-                      >shakyfloor@double-grass.com</a
-                    ><br /><br />
-                    📌 帳務與收據 Invoice & Payment Questions<br />
-                    ✉️
-                    <a href="mailto:anm@double-grass.com"
-                      >anm@double-grass.com</a
-                    ><br />
+                    如有任何問題，請依主題聯繫對應窗口，我們將盡快回覆您If you
+                    have any questions, please contact the appropriate email
+                    below:
+                    <br /><br /><br />
+                    <div style="margin-left: 1em">
+                      📌 簽證相關 Visa Support<br />
+                      ✉️
+                      <a href="mailto:anm@double-grass.com"
+                        >anm@double-grass.com</a
+                      ><br /><br />
+                      📌 草率簿資料上傳 & 行銷素材 Catalog Submission &
+                      Marketing Materials<br />
+                      ✉️
+                      <a href="mailto:shao@double-grass.com"
+                        >shao@double-grass.com</a
+                      ><br /><br />
+                      📌 攤位配置與參展相關 Booth & Exhibitor Inquiries<br />
+                      ✉️
+                      <a href="mailto:xavia@double-grass.com"
+                        >xavia@double-grass.com</a
+                      ><br /><br />
+                      📌 寄件服務 Shipping Service<br />
+                      ✉️
+                      <a href="mailto:shakyfloor@double-grass.com"
+                        >shakyfloor@double-grass.com</a
+                      ><br /><br />
+                      📌 現場活動相關（講座／工作坊／表演）Program Proposals<br />
+                      ✉️
+                      <a href="mailto:shakyfloor@double-grass.com"
+                        >shakyfloor@double-grass.com</a
+                      ><br /><br />
+                      📌 帳務與收據 Invoice & Payment Questions<br />
+                      ✉️
+                      <a href="mailto:anm@double-grass.com"
+                        >anm@double-grass.com</a
+                      ><br />
+                    </div>
                     <br />
                     📩 提醒 Reminder
-                    來信請註明您的報名編號，以利我們快速為您查詢與回覆。 Please
-                    include your application number in all emails to help us
-                    respond efficiently.
+                    來信請註明您的報名編號，以利我們快速為您查詢與回覆。
+                    <br />Please include your application number in all emails
+                    to help us respond efficiently.
                   </div>
                   <!-- 我484故意寫個圈圈叉叉在這裡讓你忘記你為什麼要聯絡窗口? 嗯對，是。
                    Do i purposely write an XOXO here to distract you from your original purpose? yish:P -->
