fix: enhance clarity and formatting in contact information section

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1954,7 +1954,7 @@
                       font-family: 'Inclusive Sans', sans-serif;
                     "
                   >
-                    如有任何問題，請依主題聯繫對應窗口，我們將盡快回覆您If you
+                    如有任何問題，請依主題聯繫對應窗口，我們將盡快回覆您 If you
                     have any questions, please contact the appropriate email
                     below:
                     <br /><br /><br />
@@ -1992,10 +1992,12 @@
                       ><br />
                     </div>
                     <br />
-                    📩 提醒 Reminder
-                    來信請註明您的報名編號，以利我們快速為您查詢與回覆。
-                    <br />Please include your application number in all emails
-                    to help us respond efficiently.
+                    <span style="text-decoration: underline"
+                      >提醒 Reminder:</span
+                    ><br />
+                    來信請註明您的<i>報名編號</i>，以利我們快速為您查詢與回覆。
+                    <br />Please include your <i>application number</i> in all
+                    emails to help us respond efficiently.
                   </div>
                   <!-- 我484故意寫個圈圈叉叉在這裡讓你忘記你為什麼要聯絡窗口? 嗯對，是。
                    Do i purposely write an XOXO here to distract you from your original purpose? yish:P -->
