fix: remove redundant language switch for declaration section and streamline text

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1046,9 +1046,7 @@
                                 style="font-size: 0.8em; color: #888"
                                 id="declaration-desc"
                               >
-                                請下載並簽署參展同意書，完成後請上傳。 Please
-                                download and sign the declaration, then upload
-                                the signed file below.
+                                請下載並簽署參展同意書，完成後請上傳。
                               </span>
                               <input
                                 type="file"
@@ -1068,7 +1066,7 @@
                                   cursor: pointer;
                                 "
                               >
-                                上傳 Upload
+                                Upload
                               </button>
                             </td>
                           </tr>
