fix: improve clarity of overseas visa section and streamline live event description

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1253,7 +1253,7 @@
                 </td>
               </tr>
 
-              <!-- 海外簽證資料連結 Visa Upload -->
+              <!-- 海外簽證資料連結-->
               <tr style="display: none" id="media-section-overseasvisa">
                 <td style="border-top: none; width: 55vw">
                   <div id="visa-upload">
@@ -1262,13 +1262,13 @@
                     invitation letter and a brief introduction to TPABF. If you
                     need any additional documents or information, feel free to
                     contact us.
-                    <br /><br />
-                    <a
-                      href="https://drive.google.com/drive/folders/1sN6Yl2VnHXzTWAwXyOrTQ_cMjrITii0p?usp=sharing"
-                      target="_blank"
-                      >Download Package</a
-                    >
                   </div>
+                  <br />
+                  <a
+                    href="https://drive.google.com/drive/folders/1sN6Yl2VnHXzTWAwXyOrTQ_cMjrITii0p?usp=sharing"
+                    target="_blank"
+                    >Download Package</a
+                  >
                 </td>
               </tr>
 
@@ -1312,17 +1312,16 @@
                     style="margin-top: 0.5em; font-size: 1rem"
                     id="live-event-desc"
                   >
-                    想與大家更近距離互動？我們開放以下形式的現場活動徵集：短講、表演、工作坊、DJ等。<br />
+                    想與大家更近距離互動？我們開放以下形式的現場活動徵集：短講、表演、工作坊、DJ等。
                   </div>
-                  <div style="margin-top: 0.5em; font-size: 1rem">
-                    <a
-                      href="https://forms.gle/ckXiewW68i1VwKYt6"
-                      target="_blank"
-                      id="live-event-signup-link"
-                    >
-                      報名表單
-                    </a>
-                  </div>
+                  <br />
+                  <a
+                    href="https://forms.gle/ckXiewW68i1VwKYt6"
+                    target="_blank"
+                    id="live-event-signup-link"
+                  >
+                    報名表單
+                  </a>
                 </td>
               </tr>
 
