fix: improve clarity of manual and media kit download sections

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1339,14 +1339,15 @@
                   >
                   <div id="material-download-desc" style="margin-bottom: 1em">
                     <strong>下載視覺素材包：</strong><br />
-                    若您需要使用草率季官方行銷素材，點此下載檔案。<br />
+                    若您需要使用草率季官方行銷素材，點此下載檔案。
                   </div>
+                  <br />
                   <a
                     id="media-zip-link"
                     href="https://drive.google.com/drive/folders/18CIdZXZi0wD4fGmh_YGyc-4PYUavMHSn?usp=sharing"
                     download
                     >Download</a
-                  >
+                  ><br />
                   <div id="material-upload-desc">
                     <strong>上傳：</strong><br />
                     請使用素材包內的官方模板（AI檔）製作，並上傳一張符合格式的圖片，我們將安排社群露出。(書攤需有三本書籍圖片上傳）<br />
@@ -1433,7 +1434,7 @@
                   >
                     📋
                   </button>
-                  <br />
+                  <br /><br />
                   <a
                     href="https://your-shopline-link.com"
                     target="_blank"
