fix: remove unnecessary line breaks in live event descriptions for clarity

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -169,7 +169,7 @@
                   </div>
                   <br />
                   <div
-                    style="margin-top: 0.5em; font-size: 1rem"
+                    style="font-size: 1rem"
                     id="live-event-schedule-reminder"
                   ></div>
                 </td>
