fix: update visa information for clarity and bilingual support

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -337,7 +337,7 @@
                           border-bottom: none;
                         "
                       >
-                        <span class="label">簽證申請 Visa Requirement</span
+                        <span class="label">簽證資訊 Visa Information</span
                         ><br /><span id="visa-requirement">Not Require</span>
                       </td>
                     </tr>
@@ -369,7 +369,8 @@
               </tr>
               <tr>
                 <td colspan="2">
-                  <span class="label">無限柔軟是 Soft POW is…..(50字內）</span
+                  <span class="label"
+                    >無限柔軟是 Soft POW is…...(50字內 Within 50 words）</span
                   ><br />
                   <span id="yearlyanswer"></span>
                 </td>
