fix: improve booth type display logic and enhance reminder text clarity

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1975,10 +1975,8 @@
                         >anm@double-grass.com</a
                       ><br />
                     </div>
-                    <br />
-                    <span style="text-decoration: underline"
-                      >提醒 Reminder:</span
-                    ><br />
+                    <br /><br />
+                    <span><u>提醒 Reminder</u>:</span><br />
                     來信請註明您的<i>報名編號</i>，以利我們快速為您查詢與回覆。
                     <br />Please include your <i>application number</i> in all
                     emails to help us respond efficiently.
