fix: remove unnecessary line breaks in label text for consistency

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -369,9 +369,7 @@
               </tr>
               <tr>
                 <td colspan="2">
-                  <span class="label"
-                    >無限柔軟是 Soft POW is…...(50字內 Within 50 words）</span
-                  ><br />
+                  <span class="label">無限柔軟是 Soft POW is…...</span><br />
                   <span id="yearlyanswer"></span>
                 </td>
               </tr>
@@ -847,7 +845,8 @@
                 </tr>
                 <tr>
                   <td colspan="2">
-                    <span class="label">無限柔軟是 Soft POW is…..(50字內）</span
+                    <span class="label"
+                      >無限柔軟是 Soft POW is…..(50字內 Within 50 words）</span
                     ><br />
                     <textarea
                       name="yearlyanswer"
