fix: refine styling and remove unnecessary line breaks in declaration section

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1032,30 +1032,31 @@
                           </tr>
                           <tr>
                             <td
-                              style="
-                                padding: 0.5em 0.5em 0.5em 0.5em;
-                                border: none;
-                              "
+                              style="padding: 0.5em 0em 0em 0.5em; border: none"
                             >
                               <a
                                 href="downloads/TPABF_Exhibitor_Declaration.pdf"
                                 target="_blank"
                                 id="declaration-download-link"
                               >
-                                下載參展同意書 <br />Download Declaration
+                                下載參展同意書
                               </a>
-                              <br /><br />
+                              <br /
                               <span
-                                style="font-size: 0.8em; color: #888"
+                                style="
+                                  font-size: 0.8em;
+                                  line-height: 0.7rem;
+                                  color: #888;
+                                "
                                 id="declaration-desc"
                               >
-                                請下載並簽署參展同意書，完成後請上傳。
-                              </span>
+                                請下載並簽署參展同意書，完成後請上傳。 </span
+                              >><br />
                               <input
                                 type="file"
                                 id="declaration-file"
                                 accept=".pdf,.jpg,.jpeg,.png"
-                                style="margin-bottom: 0.5em"
+                                style="margin-bottom: 0.5em; max-width: 198px"
                               />
                               <button
                                 id="uploadBtnDeclaration"
