fix: update button styles for consistency and improved appearance

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -881,7 +881,14 @@
                 <button
                   type="submit"
                   id="submit-edit-brand"
-                  style="padding: 0.7rem 2rem"
+                  style="
+                    padding: 0.3em 1.2em;
+                    background: #000;
+                    color: #fff;
+                    border: none;
+                    border-radius: 3px;
+                    cursor: pointer;
+                  "
                 >
                   送出 Submit
                 </button>
@@ -1253,7 +1260,18 @@
                 >
                   <div>
                     <input type="file" id="visa-file" accept=".pdf" />
-                    <button type="button" id="uploadBtnVisa">
+                    <button
+                      style="
+                        padding: 0.3em 1.2em;
+                        background: #000;
+                        color: #fff;
+                        border: none;
+                        border-radius: 3px;
+                        cursor: pointer;
+                      "
+                      type="button"
+                      id="uploadBtnVisa"
+                    >
                       上傳 Upload
                     </button>
                   </div>
@@ -1319,7 +1337,18 @@
                     id="marketing-file"
                     accept=".pdf,.jpg,.jpeg,.png"
                   /><br />
-                  <button type="button" id="uploadBtnMarketing">
+                  <button
+                    style="
+                      padding: 0.3em 1.2em;
+                      background: #000;
+                      color: #fff;
+                      border: none;
+                      border-radius: 3px;
+                      cursor: pointer;
+                    "
+                    type="button"
+                    id="uploadBtnMarketing"
+                  >
                     上傳 Upload
                   </button>
                 </td>
@@ -1416,7 +1445,18 @@
                 >
                   <div>
                     <input type="file" id="catalog-file" accept=".pdf" />
-                    <button type="button" id="uploadBtnCatalog">
+                    <button
+                      style="
+                        padding: 0.3em 1.2em;
+                        background: #000;
+                        color: #fff;
+                        border: none;
+                        border-radius: 3px;
+                        cursor: pointer;
+                      "
+                      type="button"
+                      id="uploadBtnCatalog"
+                    >
                       上傳 Upload
                     </button>
                   </div>
@@ -1914,7 +1954,14 @@
                 <button
                   type="submit"
                   id="submit-edit-account"
-                  style="padding: 0.7rem 2rem"
+                  style="
+                    padding: 0.3em 1.2em;
+                    background: #000;
+                    color: #fff;
+                    border: none;
+                    border-radius: 3px;
+                    cursor: pointer;
+                  "
                 >
                   送出 Submit
                 </button>
