--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -33,6 +33,7 @@
     <script src="js/cookie.js"></script>
     <script src="js/dashboard-basic.js"></script>
     <script src="js/edit-profile.js"></script>
+    <script src="js/dashboardupload/upload_dashboard.js"></script>
   </head>
   <body>
     <div id="loading-mask" style="display: flex">
